--- a/package.json
+++ b/package.json
@@ -8,15 +8,31 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
+  "expo": {
+    "packagerOpts": {
+      "config": "metro.config.ts",
+      "sourceExts": [
+        "js",
+        "jsx",
+        "tsx",
+        "ts",
+        "svg"
+      ]
+    }
+  },
   "dependencies": {
     "expo": "~51.0.28",
+    "expo-checkbox": "~3.0.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-bouncy-checkbox": "^4.1.2",
+    "react-native-svg": "^15.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.1.3"
   },
   "private": true
