--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     }
   },
   "dependencies": {
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.28",
     "expo-checkbox": "~3.0.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-bouncy-checkbox": "^4.1.2",
-    "react-native-svg": "^15.6.0"
+    "react-native-svg": "^15.6.0",
+    "react-native-uuid": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
